--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,17 +74,18 @@
                 android:id="@+id/btnLogin"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Login"
+                android:text="SIGN IN"
                 android:onClick="@{userViewModel::sendLoginInfo}"
                 app:layout_constraintTop_toBottomOf="@id/etPassword"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"/>
 
             <Button
-                android:id="@+id/btnSignIn"
+                android:id="@+id/btnSignUp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Sign In"
+                android:text="Sign UP"
+                android:onClick="@{userViewModel::signUpNewUser}"
                 app:layout_constraintTop_toBottomOf="@id/btnLogin"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
