--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <layout>
     <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/mainDrawerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
@@ -17,11 +18,12 @@
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
         </FrameLayout>
         <android.support.design.widget.NavigationView
-            android:layout_width="wrap_content"
+            android:id="@+id/mainNavigationView"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
+            app:headerLayout="@layout/header_main_drawer"
             app:menu="@menu/main_menu"/>
-
     </android.support.v4.widget.DrawerLayout>
 </layout>
