--- a/app/src/main/res/layout/header_main_drawer.xml
+++ b/app/src/main/res/layout/header_main_drawer.xml
@@ -9,6 +9,7 @@
     android:gravity="bottom">
 
     <TextView
+        android:id="@+id/main_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="My header title"
