--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="secondColorPrimary">#f44336</color>
+    <color name="secondColorPrimaryDark">#d32f2f</color>
+    <color name="secondColorAccent">#ffd740</color>
 </resources>
