--- a/app/src/main/res/layout/adapter_main_list.xml
+++ b/app/src/main/res/layout/adapter_main_list.xml
@@ -9,7 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:foreground="?attr/selectableItemBackground">
 
         <TextView
             android:id="@+id/main_text"
